# AI-Girlfriend

./: CMakeLists.txt  readme.md
include/: Singleton.hpp  ThreadPool.h
lib/: portaudio_static_x64.lib  portaudio_x64.lib
lib/pkgconfig/: portaudio-2.0.pc
src/: ThreadPool.cpp
